...
    var body: some View {
        NavigationStack {
            Form {
                Section("Group Name") {
                    TextField("Type in the name of your group", text: $groupName)
                }
                .accessibilityIdentifier("group_name_text_field")
                
                Section("Select Icon") {
                    LazyVGrid(columns:[GridItem(.adaptive(minimum:40))]) {
                        ForEach(icons, id: \.self) { icon in
                            Image(systemName: icon)
                                .font(.title2)
...
                    Button("Save") {
                        let newGroup = TaskGroup(title: groupName, symbolName: selectedIcon, tasks: [])
                        onSave(newGroup)
                        dismiss()
                    } // End Save Btn
                    .disabled(groupName.isEmpty)
                    .accessibilityIdentifier("btn_save_new_group")
                }
            }
        } // NavStk
    }
}

