...
            "state" : "translated",
            "value" : "Benvenuto in ToDo App"
          }
        }
      }
    },
    "Who is working today?" : {
      "comment" : "A question displayed above the list of profiles.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "من يعمل اليوم؟"
          }
        },
        "es-419" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "¿Quién está trabajando hoy?"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Qui travaille aujourd’hui ?"
...
