...
                ToolbarItem(placement: .primaryAction) {
                    Button {
                        isShowingAddGroup = true
                    } label: {
                        Image(systemName: "plus")
                    }
                    .accessibilityIdentifier("btn_add_group")
                }
            }
        } detail : {
            if let group = selectedGroup {
                if let index = profile.groups.firstIndex(where: {$0.id == group.id}) {
                    TaskGroupDetailView(groups: $profile.groups[index])
...
